--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "itoBot",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "dependencies": {
     "body-parser": "^1.16.0",
     "compression": "^1.6.2",
