--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "messenger-bot": "^6.1.0",
+    "messenger-bot": "^6.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+        "messenger-bot": "^6.1.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
