--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "iotbot",
   "version": "1.0.0",
   "description": "iot bot",
-  "main": "app.js",
+  "main": "server.js",
   "dependencies": {
     "body-parser": "^1.16.1",
     "express": "^4.14.1"
