--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "iot bot",
   "main": "server.js",
   "dependencies": {
-    "body-parser": "^1.16.1",
-    "express": "^4.14.1"
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "request": "^2.72.0"
   },
   "devDependencies": {
   },
